--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,10 @@ option(WASM_AUTO_FETCH_TOOLS "Auto-download missing tools during configure" ON)
 option(WEBVULKAN_BUILD_TESTS "Build maintainer smoke tests" OFF)
 option(WEBVULKAN_ALLOW_DEP_UPDATES "Allow dependency git update during configure" OFF)
 option(WEBVULKAN_DEPS_EDITABLE "Use editable local dependency checkouts without automatic git reset/update" OFF)
-set(WEBVULKAN_CLANG_WASM_PACKAGE "clang/clang" CACHE STRING "Wasmer package used for OpenCL C to SPIR-V compilation")
-set(WEBVULKAN_SPIRV_WASM_PACKAGE "lights0123/llvm-spir" CACHE STRING "Wasmer package that provides SPIR-V compiler entrypoint")
-set(WEBVULKAN_SPIRV_WASM_ENTRYPOINT "clspv" CACHE STRING "Wasmer package command used for OpenCL C to SPIR-V")
+set(WEBVULKAN_DXC_WASM_JS "" CACHE FILEPATH "Path to dxc.js built for Wasm HLSL-to-SPIR-V helper")
+set(WEBVULKAN_CLANG_WASM_PACKAGE "clang/clang" CACHE STRING "Wasmer package used for clang-in-wasm tooling")
+set(WEBVULKAN_SPIRV_WASM_PACKAGE "lights0123/llvm-spir" CACHE STRING "Wasmer package used for optional SPIR-V probe tooling")
+set(WEBVULKAN_SPIRV_WASM_ENTRYPOINT "clspv" CACHE STRING "Wasmer package command used for optional SPIR-V probe tooling")
 set(WASM_EMSDK_VERSION "latest" CACHE STRING "emsdk version or tag")
 set(WASM_EMSDK_GIT_URL "https://github.com/emscripten-core/emsdk.git" CACHE STRING "emsdk git repository URL")
 set(WASM_EMSDK_GIT_REF "14c18b569f55138fe4963924162244251f454fb0" CACHE STRING "Pinned emsdk git ref")
@@ -79,7 +80,10 @@ include(cmake/BootstrapCpm.cmake)
 webvulkan_bootstrap_cpm()
 include(cmake/FetchWebVulkanSources.cmake)
 set(WEBVULKAN_SHADER_COMPILER_SCRIPT "${PROJECT_SOURCE_DIR}/tools/webvulkan_compile_spirv.mjs")
+set(WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE "${PROJECT_SOURCE_DIR}/runtime/src/webvulkan_shader_runtime_registry.c")
+set(WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/runtime/include")
 include(cmake/WebVulkanShaderTools.cmake)
+include(cmake/WebVulkanRuntimeShaderRegistry.cmake)
 
 include(cmake/BootstrapEmsdk.cmake)
 ensure_emsdk_ready(
@@ -156,6 +160,8 @@ add_library(webvulkan_llvm_jit INTERFACE)
 add_library(webvulkan::llvm_jit ALIAS webvulkan_llvm_jit)
 add_library(webvulkan_shader_tools INTERFACE)
 add_library(webvulkan::shader_tools ALIAS webvulkan_shader_tools)
+add_library(webvulkan_runtime_shader_registry INTERFACE)
+add_library(webvulkan::runtime_shader_registry ALIAS webvulkan_runtime_shader_registry)
 
 add_dependencies(webvulkan_llvmpipe_wasm llvmpipe_wasm_spike)
 add_dependencies(webvulkan_llvm_jit llvmpipe_wasm_spike)
@@ -175,6 +181,12 @@ target_link_libraries(webvulkan_llvmpipe_wasm INTERFACE
 target_link_libraries(webvulkan_llvm_jit INTERFACE webvulkan::llvmpipe_wasm)
 target_compile_definitions(webvulkan_llvm_jit INTERFACE WEBVULKAN_ENABLE_LLVM_JIT=1)
 set_property(TARGET webvulkan_shader_tools PROPERTY WEBVULKAN_SHADER_COMPILER_SCRIPT "${WEBVULKAN_SHADER_COMPILER_SCRIPT}")
+target_include_directories(webvulkan_runtime_shader_registry INTERFACE
+  "$<BUILD_INTERFACE:${WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR}>"
+  "$<INSTALL_INTERFACE:${CMAKE_INSTALL_DATADIR}/webvulkan/runtime/include>"
+)
+set_property(TARGET webvulkan_runtime_shader_registry PROPERTY WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE "${WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE}")
+set_property(TARGET webvulkan_runtime_shader_registry PROPERTY WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR "${WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR}")
 
 set(WEBVULKAN_PACKAGE_NAME "WebVulkanLlvmpipeWasm")
 set(WEBVULKAN_CONFIG_DIR "${CMAKE_INSTALL_LIBDIR}/cmake/${WEBVULKAN_PACKAGE_NAME}")
@@ -206,8 +218,11 @@ install(FILES "${WEBVULKAN_DRIVER_ARCHIVE}" DESTINATION "${CMAKE_INSTALL_LIBDIR}
 install(DIRECTORY "${MESA_SRC_DIR}/include/" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mesa")
 install(DIRECTORY "${MESA_SRC_DIR}/src/" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/mesa/src")
 install(DIRECTORY "${LLVM_WASM_INSTALL_DIR}/include/" DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/llvm")
+install(DIRECTORY "${PROJECT_SOURCE_DIR}/runtime/include/" DESTINATION "${CMAKE_INSTALL_DATADIR}/webvulkan/runtime/include")
+install(FILES "${WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE}" DESTINATION "${CMAKE_INSTALL_DATADIR}/webvulkan/runtime/src")
 install(FILES "${WEBVULKAN_CONFIG_FILE}" "${WEBVULKAN_VERSION_FILE}" DESTINATION "${WEBVULKAN_CONFIG_DIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/cmake/WebVulkanShaderTools.cmake" DESTINATION "${WEBVULKAN_CONFIG_DIR}")
+install(FILES "${PROJECT_SOURCE_DIR}/cmake/WebVulkanRuntimeShaderRegistry.cmake" DESTINATION "${WEBVULKAN_CONFIG_DIR}")
 install(FILES "${PROJECT_SOURCE_DIR}/tools/webvulkan_compile_spirv.mjs" DESTINATION "${CMAKE_INSTALL_DATADIR}/webvulkan/tools")
 
 if(WEBVULKAN_BUILD_TESTS)
