--- a/cmake/WebVulkanLlvmpipeWasmConfig.cmake.in
+++ b/cmake/WebVulkanLlvmpipeWasmConfig.cmake.in
@@ -5,8 +5,12 @@ set(_webvulkan_inc_mesa "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@/mesa")
 set(_webvulkan_inc_mesa_src "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@/mesa/src")
 set(_webvulkan_inc_llvm "@PACKAGE_CMAKE_INSTALL_INCLUDEDIR@/llvm")
 set(_webvulkan_tools_dir "${PACKAGE_PREFIX_DIR}/@PACKAGE_CMAKE_INSTALL_DATADIR@/webvulkan/tools")
+set(_webvulkan_runtime_dir "${PACKAGE_PREFIX_DIR}/@PACKAGE_CMAKE_INSTALL_DATADIR@/webvulkan/runtime")
+set(WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE "${_webvulkan_runtime_dir}/src/webvulkan_shader_runtime_registry.c")
+set(WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR "${_webvulkan_runtime_dir}/include")
 set(WEBVULKAN_SHADER_COMPILER_SCRIPT "${_webvulkan_tools_dir}/webvulkan_compile_spirv.mjs")
 include("${CMAKE_CURRENT_LIST_DIR}/WebVulkanShaderTools.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/WebVulkanRuntimeShaderRegistry.cmake")
 
 if(NOT TARGET webvulkan::llvmpipe_wasm)
   add_library(webvulkan::llvmpipe_wasm INTERFACE IMPORTED)
@@ -32,6 +36,15 @@ endif()
 if(NOT TARGET webvulkan::shader_tools)
   add_library(webvulkan::shader_tools INTERFACE IMPORTED)
   set_property(TARGET webvulkan::shader_tools PROPERTY WEBVULKAN_SHADER_COMPILER_SCRIPT "${WEBVULKAN_SHADER_COMPILER_SCRIPT}")
+endif()
+
+if(NOT TARGET webvulkan::runtime_shader_registry)
+  add_library(webvulkan::runtime_shader_registry INTERFACE IMPORTED)
+  set_target_properties(webvulkan::runtime_shader_registry PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES "${WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR}"
+    WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE "${WEBVULKAN_RUNTIME_SHADER_REGISTRY_SOURCE}"
+    WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR "${WEBVULKAN_RUNTIME_SHADER_REGISTRY_INCLUDE_DIR}"
+  )
 endif()
 
 if(NOT TARGET webvulkan_llvmpipe_wasm)
